implementei testes unitarios