@@ -1,6 +1,7 @@
 package com.vr.mini.autorizador.presentation.exception;
 
 import com.vr.mini.autorizador.domain.exception.*;
+import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
@@ -10,18 +11,23 @@ import java.util.Map;
 import java.util.LinkedHashMap;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class ApiExceptionHandler {
 
+    public static final String TIMESTAMP = "timestamp";
+    public static final String STATUS = "status";
+    public static final String ERROR = "error";
+    public static final String MESSAGE = "message";
+    public static final String ERRORS = "errors";
+
     @ExceptionHandler(CartaoNaoEncontradoException.class)
     public ResponseEntity<Map<String, Object>> handleCartaoNaoEncontrado(CartaoNaoEncontradoException ex) {
         Map<String, Object> body = new LinkedHashMap<>();
-        body.put("timestamp", OffsetDateTime.now());
-        body.put("status", HttpStatus.NOT_FOUND.value());
-        body.put("error", "CARTAO_NAO_ENCONTRADO");
-        body.put("message", ex.getMessage());
+        body.put(TIMESTAMP, OffsetDateTime.now());
+        body.put(STATUS, HttpStatus.NOT_FOUND.value());
+        body.put(ERROR, "CARTAO_NAO_ENCONTRADO");
+        body.put(MESSAGE, ex.getMessage());
         return ResponseEntity.status(HttpStatus.NOT_FOUND).body(body);
     }
 
@@ -30,10 +36,10 @@ public class ApiExceptionHandler {
             SaldoInsuficienteException.class})
     public ResponseEntity<Map<String, Object>> handleBusinessExceptions(RuntimeException ex) {
         Map<String, Object> body = new LinkedHashMap<>();
-        body.put("timestamp", OffsetDateTime.now());
-        body.put("status", HttpStatus.UNPROCESSABLE_ENTITY.value());
-        body.put("error", ex.getClass().getSimpleName());
-        body.put("message", ex.getMessage());
+        body.put(TIMESTAMP, OffsetDateTime.now());
+        body.put(STATUS, HttpStatus.UNPROCESSABLE_ENTITY.value());
+        body.put(ERROR, ex.getClass().getSimpleName());
+        body.put(MESSAGE, ex.getMessage());
         return ResponseEntity.status(HttpStatus.UNPROCESSABLE_ENTITY).body(body);
     }
 
@@ -42,14 +48,14 @@ public class ApiExceptionHandler {
         List<String> errors = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
-                .map(error -> error.getDefaultMessage())
-                .collect(Collectors.toList());
+                .map(DefaultMessageSourceResolvable::getDefaultMessage)
+                .toList();
 
         Map<String, Object> body = new LinkedHashMap<>();
-        body.put("timestamp", OffsetDateTime.now());
-        body.put("status", HttpStatus.BAD_REQUEST.value());
-        body.put("error", "VALIDATION_ERROR");
-        body.put("errors", errors);
+        body.put(TIMESTAMP, OffsetDateTime.now());
+        body.put(STATUS, HttpStatus.BAD_REQUEST.value());
+        body.put(ERROR, "VALIDATION_ERROR");
+        body.put(ERRORS, List.copyOf(errors));  // Garante imutabilidade
 
         return ResponseEntity.badRequest().body(body);
     }
@@ -57,10 +63,10 @@ public class ApiExceptionHandler {
     @ExceptionHandler(Exception.class)
     public ResponseEntity<Map<String, Object>> handleGenericException(Exception ex) {
         Map<String, Object> body = new LinkedHashMap<>();
-        body.put("timestamp", OffsetDateTime.now());
-        body.put("status", HttpStatus.INTERNAL_SERVER_ERROR.value());
-        body.put("error", "INTERNAL_SERVER_ERROR");
-        body.put("message", "Ocorreu um erro inesperado");
+        body.put(TIMESTAMP, OffsetDateTime.now());
+        body.put(STATUS, HttpStatus.INTERNAL_SERVER_ERROR.value());
+        body.put(ERROR, "INTERNAL_SERVER_ERROR");
+        body.put(MESSAGE, "Ocorreu um erro inesperado");
 
         // Logar o erro completo para debug
         ex.printStackTrace();
